[package]
name = "rfsm"
version = "0.1.0"
edition = "2021"

[features]
default = ["ECMAScript", "EnvLog", "BasicHttpEventIOProcessor"]
ECMAScript = ["boa_engine"]
EnvLog = ["env_logger"]
BasicHttpEventIOProcessor = ["hyper", "http-body-util", "hyper-util", "tokio", "form_urlencoded"]

[dependencies]
log = "0.4.0"
timer = "0.2.0"
chrono = "0.4"
regex = "1"
lazy_static = "1.4.0"
quick-xml = { version = "0.27.1", features = ["serialize"] }
boa_engine = { version = "0.16.0", optional = true }
env_logger = { version = "0.9.0", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
hyper = { version = "0.14.28", features = ["full"], optional = true  }
http-body-util = { version = "0.1", optional = true }
hyper-util = { version = "0.1.3", features = ["full"], optional = true  }
tokio = { version = "1.28.2", features = ["full"], optional = true }
form_urlencoded = { version = "1.2.1", optional = true }

[profile.dev.package."*"]
opt-level = "z"