[package]
name = "rfsm"
version = "0.1.0"
edition = "2021"
default-run = "fsm"
autobins = true

[lib]
name = "rfsm"
path = "src/lib.rs"

[features]
default = ["ECMAScript", "EnvLog", "BasicHttpEventIOProcessor"]
ECMAScript = ["boa_engine"]
EnvLog = ["env_logger"]
BasicHttpEventIOProcessor = ["hyper", "http-body-util", "hyper-util", "form_urlencoded"]

[dependencies]
log = "0.4.0"
timer = "0.2.0"
chrono = "0.4"
regex = "1"
lazy_static = "1.4.0"
quick-xml = { version = "0.27.1", features = ["serialize"] }
boa_engine = { version = "0.16.0", optional = true }
env_logger = { version = "0.9.0", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
hyper = { version = "0.14.28", features = ["full"], optional = true  }
http-body-util = { version = "0.1", optional = true }
hyper-util = { version = "0.1.3", features = ["full"], optional = true  }
tokio = { version = "1.28.2", features = ["full"] }
form_urlencoded = { version = "1.2.1", optional = true }
serde_json = "1.0"
serde = "1.0"

[profile.dev.package."*"]
opt-level = "z"